--- a/css/layout.css
+++ b/css/layout.css
@@ -494,14 +494,15 @@ body {
           cursor: pointer; }
   .xz-admin .xz-body-edit.train-create .lesson-list-checked > div {
     position: relative;
-    width: 260px;
+    width: 230px;
     border: 1px solid #d2d2d2;
     margin-bottom: 6px;
-    text-indent: 6px; }
+    padding-left: 6px;
+    padding-right: 24px; }
     .xz-admin .xz-body-edit.train-create .lesson-list-checked > div > div {
       position: absolute;
       top: 2px;
-      right: 1px;
+      right: -5px;
       width: 30px;
       height: 30px;
       cursor: pointer; }
@@ -725,7 +726,12 @@ body {
           background-color: #ff6900;
           color: #ffffff;
           margin-top: 15px;
-          margin-bottom: 15px; }
+          margin-bottom: 15px;
+          overflow-y: scroll; }
+          .xz-site .xz-body .xz-site-train .train-list .train-list-left::-webkit-scrollbar {
+            width: 2px; }
+          .xz-site .xz-body .xz-site-train .train-list .train-list-left::-webkit-scrollbar-thumb {
+            background-color: transparent; }
           .xz-site .xz-body .xz-site-train .train-list .train-list-left a {
             color: #ffffff;
             text-decoration: none; }
